# mockly

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  install.sh  release-please-config.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  init.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-mockly/: action.yml
.github/workflows/: ci.yml  dotnet-client.yml  go-client.yml  java-client.yml  node-client.yml  python-client.yml  release-please.yml  rust-client.yml
.gitlab/: mockly.yml
assets/: assets.go
clients/dotnet/: CHANGELOG.md  LICENSE  Mockly.Driver.sln  README.md
clients/go/: CHANGELOG.md  README.md  go.mod  install.go  mocklydriver.go  mocklydriver_test.go  types.go  utils.go
clients/go/testcontainers/: go.mod  go.sum  mockly.go  mockly_integration_test.go  mockly_test.go
clients/java/: CHANGELOG.md  README.md  pom.xml
clients/java/testcontainers/: README.md  pom.xml
clients/node/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
clients/node-testcontainers/: README.md  package-lock.json  package.json  tsconfig.json  vitest.integration.config.ts
clients/node-testcontainers/src/: MocklyContainer.integration.test.ts  MocklyContainer.test.ts  MocklyContainer.ts  index.ts  types.ts
clients/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
clients/python-testcontainers/: README.md  pyproject.toml
clients/python-testcontainers/src/mockly_testcontainers/: __init__.py  _types.py  container.py
clients/python-testcontainers/tests/: test_container.py  test_integration.py
clients/python/src/mockly_driver/: __init__.py  _install.py  _server.py  _types.py
clients/python/tests/: test_unit.py
clients/rust/: CHANGELOG.md  Cargo.toml  README.md
clients/rust-testcontainers/: Cargo.toml  README.md  rust-toolchain.toml
clients/rust-testcontainers/src/: container.rs  image.rs  lib.rs
clients/rust-testcontainers/tests/: integration_test.rs
clients/rust/src/: install.rs  lib.rs  server.rs  types.rs  utils.rs
clients/rust/tests/: unit_tests.rs
cmd/mockly/: main.go
configs/: example.yaml
configs/presets/: README.md  anthropic.yaml  github.yaml  keycloak.yaml  ntlm.yaml  oauth2.yaml  openai.yaml  pagerduty.yaml  sendgrid.yaml  slack.yaml  stripe.yaml  twilio.yaml
docs/: mockly.postly.json  openapi.yaml
docs/clients/: dotnet.md  go.md  java.md  node.md  python.md  rust.md
internal/api/: api_extended_test.go  api_nil_test.go  api_protocols_test.go  api_test.go  api_update_test.go  protocols_extra.go  server.go
internal/config/: config.go  config_extra_test.go  config_test.go
internal/engine/: funcs.go  funcs_test.go  matcher.go  matcher_test.go
internal/logger/: logger.go  logger_test.go
internal/presets/: authelia.yaml  aws-s3.yaml  github.yaml  keycloak.yaml  oauth2.yaml  presets.go  presets_test.go  resend.yaml  stripe.yaml
internal/scenarios/: faults.go  faults_test.go  store.go  store_test.go
internal/state/: store.go  store_test.go
internal/testutil/: cert.go
internal/tlsutil/: tlsutil.go  tlsutil_test.go
tests/e2e/: e2e_test.go
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts
(+139 files in other folders)
