[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockly-driver"
version = "0.1.0"
description = "Python client for Mockly — start/stop servers and manage HTTP mocks in tests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mock", "testing", "http", "integration-test", "mockly"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
dependencies = []   # stdlib only

[project.urls]
Homepage = "https://github.com/dever-labs/mockly/tree/main/clients/python"
Repository = "https://github.com/dever-labs/mockly"
Issues = "https://github.com/dever-labs/mockly/issues"

[project.scripts]
mockly-install = "mockly_driver._install:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mockly_driver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
